<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Complaint"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/subject"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:hint="@string/sub"
        android:background="@drawable/edit_text_border"
        />

    <EditText
        android:id="@+id/content"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:hint="@string/mes"
        android:maxLength="500"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_text_border"
        />

    <Button
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rectangle_pink"
        android:text="@string/send"
        android:onClick="sendMail"
        />

</LinearLayout>