<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/reg"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/uname"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="Username"
        android:textColorHint="#ffffff"
        android:maxLength="15"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/secTxt"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:hint="email"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:maxLength="20"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/thirdTxt"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/pwd"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="password"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:maxLength="8"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/txt4"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:hint="mobile"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:maxLength="10"
        android:background="@drawable/edit_text_border"/>
    <Button
        android:id="@+id/registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_rectangle_blue"
        android:textColor="#FFFFFF"
        android:onClick="createUser"
        android:text="@string/reg1" />
    <TextView android:id="@+id/lnkLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/golog"
        android:onClick="goToLogin"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/blue"/>

</LinearLayout>