<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Account">

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/accoun"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="25sp"
        android:textColor="#00008B"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/nameText"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textSize="25sp"
        android:textColor="#00008B"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/emailText"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/mobile"
        android:textSize="25sp"
        android:textColor="#00008B"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/phoneText"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="150dp"
        android:background="@drawable/button_rectangle_blue"
        android:text="@string/log"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:onClick="logOut"
        android:id="@+id/donotbtn"
        />

</LinearLayout>