<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/student"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/et1"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_email_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_email_24"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_border"
        />
    <EditText
        android:id="@+id/et2"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_lock_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_lock_24"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"
        />
    <Button
        android:id="@+id/btlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:background="@drawable/button_rectangle_blue"
        android:layout_marginStart="158dp"
        android:layout_marginTop="30dp"
        android:onClick="loginUser"
        android:textColor="#ffffff"
        />
    <Button
        android:id="@+id/btreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg1"
        android:background="@drawable/button_rectangle_pink"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:onClick="goToRegister"
        android:textColor="#ffffff"
        />

</LinearLayout>